hero image overflow fixed

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -27,7 +27,10 @@
 
 .container {
   margin-bottom: 14rem /* 224px */;
-  /* width: 100%; */
+
+}
+.hero{
+  max-width: 100%;
 }
 .sectionWrapper{
   margin-top: 3.5rem;
